--- a/astrogrowth-v3/client/src/i18n/locales/en.json
+++ b/astrogrowth-v3/client/src/i18n/locales/en.json
@@ -11,6 +11,82 @@
     "confirm": "Confirm",
     "search": "Search"
   },
+  "landing": {
+    "hero": {
+      "badge": "🌍 Global Solution • 48 AI Agents • Full Automation",
+      "titlePre": "Your ",
+      "titleGradient": "AI-Powered",
+      "titlePost": "Marketing Agency",
+      "subtitle": "From prospecting to conversion on autopilot. 10x faster, 80% cheaper than traditional agencies. Built for businesses worldwide.",
+      "ctaStart": "Get Started",
+      "ctaDemo": "Watch Demo",
+      "stats": {
+        "faster": "Faster Growth",
+        "cheaper": "Cost Reduction",
+        "specialists": "AI Specialists",
+        "automation": "Automation"
+      }
+    },
+    "nav": {
+      "features": "Features",
+      "agents": "Agents",
+      "pricing": "Pricing",
+      "getStarted": "Get Started"
+    }
+  },
+  "dashboard": {
+    "title": "Dashboard",
+    "live": "Live",
+    "subtitle": "Real-time overview of your marketing campaigns",
+    "newCampaign": "New Campaign",
+    "stats": {
+      "leads": "Leads Generated",
+      "leadsDesc": "Total prospects identified",
+      "contents": "Content Created",
+      "contentsDesc": "Marketing posts generated",
+      "published": "Posts Published",
+      "publishedDesc": "LinkedIn publications",
+      "engagement": "Total Engagement",
+      "engagementDesc": "Likes, comments and shares"
+    },
+    "metrics": {
+      "title": "Metrics Evolution",
+      "description": "Growth of leads, content and publications over the last 7 days",
+      "days7": "7 days",
+      "days30": "30 days",
+      "days90": "90 days"
+    },
+    "engagement": {
+      "title": "Engagement Details",
+      "description": "Performance of your LinkedIn posts",
+      "likes": "Likes",
+      "comments": "Comments",
+      "shares": "Shares",
+      "impressions": "Impressions"
+    },
+    "activeCampaigns": {
+      "title": "Active Campaigns",
+      "running": "running",
+      "empty": "No active campaigns",
+      "create": "Create Campaign",
+      "status": "Running",
+      "leads": "leads",
+      "content": "content",
+      "published": "published"
+    },
+    "recentContent": {
+      "title": "Recent Content",
+      "generated": "generated",
+      "empty": "No content generated",
+      "status": {
+        "published": "Published",
+        "approved": "Approved",
+        "rejected": "Rejected",
+        "pending": "Pending"
+      },
+      "score": "Score"
+    }
+  },
   "nav": {
     "home": "Home",
     "campaigns": "Campaigns",
