--- a/astrogrowth-v3/client/src/i18n/locales/fr.json
+++ b/astrogrowth-v3/client/src/i18n/locales/fr.json
@@ -11,6 +11,82 @@
     "confirm": "Confirmer",
     "search": "Rechercher"
   },
+  "landing": {
+    "hero": {
+      "badge": "🌍 Solution Globale • 48 Agents IA • Automatisation Totale",
+      "titlePre": "Votre ",
+      "titleGradient": "Agence Marketing",
+      "titlePost": "Propulsée par l'IA",
+      "subtitle": "De la prospection à la conversion en pilote automatique. 10x plus rapide, 80% moins cher que les agences traditionnelles. Conçu pour les entreprises du monde entier.",
+      "ctaStart": "Commencer",
+      "ctaDemo": "Voir la Démo",
+      "stats": {
+        "faster": "Croissance Rapide",
+        "cheaper": "Réduction Coûts",
+        "specialists": "Spécialistes IA",
+        "automation": "Automatisation"
+      }
+    },
+    "nav": {
+      "features": "Fonctionnalités",
+      "agents": "Agents",
+      "pricing": "Tarifs",
+      "getStarted": "Commencer"
+    }
+  },
+  "dashboard": {
+    "title": "Tableau de Bord",
+    "live": "Live",
+    "subtitle": "Vue d'ensemble de vos campagnes marketing en temps réel",
+    "newCampaign": "Nouvelle Campagne",
+    "stats": {
+      "leads": "Leads Générés",
+      "leadsDesc": "Total des prospects identifiés",
+      "contents": "Contenus Créés",
+      "contentsDesc": "Posts marketing générés",
+      "published": "Posts Publiés",
+      "publishedDesc": "Publications sur LinkedIn",
+      "engagement": "Engagement Total",
+      "engagementDesc": "Likes, commentaires et partages"
+    },
+    "metrics": {
+      "title": "Évolution des Métriques",
+      "description": "Progression de vos leads, contenus et publications sur les 7 derniers jours",
+      "days7": "7 jours",
+      "days30": "30 jours",
+      "days90": "90 jours"
+    },
+    "engagement": {
+      "title": "Détails d'Engagement",
+      "description": "Performance de vos publications LinkedIn",
+      "likes": "Likes",
+      "comments": "Commentaires",
+      "shares": "Partages",
+      "impressions": "Impressions"
+    },
+    "activeCampaigns": {
+      "title": "Campagnes Actives",
+      "running": "en cours",
+      "empty": "Aucune campagne active",
+      "create": "Créer une campagne",
+      "status": "En cours",
+      "leads": "leads",
+      "content": "contenus",
+      "published": "publiés"
+    },
+    "recentContent": {
+      "title": "Contenus Récents",
+      "generated": "généré(s)",
+      "empty": "Aucun contenu généré",
+      "status": {
+        "published": "Publié",
+        "approved": "Approuvé",
+        "rejected": "Rejeté",
+        "pending": "En attente"
+      },
+      "score": "Score"
+    }
+  },
   "nav": {
     "home": "Accueil",
     "campaigns": "Campagnes",
